<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="br.com.lsds.escolaapp.activitys.IncLocalActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_econtre_local"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/tv_encontre_local"/>
            <Spinner
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
            <TextView
                android:id="@+id/tv_confirme_local"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/tv_confirme_local"/>
            <TextView
                android:id="@+id/tv_info_email_local"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/tv_info_email_local"/>
            <EditText
                android:id="@+id/et_email_local"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/hint_et_email_local"
                android:inputType="textEmailAddress"/>
            <TextView
                android:id="@+id/tv_info_doc_local"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/tv_info_doc_local"/>
            <EditText
                android:id="@+id/et_doc_local"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/hint_et_doc_local"
                android:inputType="number"/>
            <Button
                android:id="@+id/bt_solicita_token"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/bt_solicita_token"
                android:background="@color/colorPrimary"/>
            <TextView
                android:id="@+id/tv_info_token"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/tv_info_token"/>
            <EditText
                android:id="@+id/et_info_token"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/hint_et_info_token"/>
            <Button
                android:id="@+id/bt_incluir_local"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/bt_incluir_local"
                android:background="@color/colorPrimary"/>
        </LinearLayout>

    </ScrollView>
</LinearLayout>
