<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.com.lsds.escolaapp.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/quem_e_voce"
            android:textStyle="bold"
            android:textColor="@color/colorBlack"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="30dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/selecione_pai_filho_local"
            android:textStyle="bold"
            android:textColor="@color/colorBlack"
            android:layout_marginBottom="10dp"/>

        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton android:id="@+id/radio_pai"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Papai_ou_mamae"
                android:layout_marginBottom="10dp"/>

            <RadioButton android:id="@+id/radio_filho"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Filho_a"
                android:layout_marginBottom="10dp"/>

            <RadioButton android:id="@+id/radio_local"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/local"/>
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">
        <Button
            android:id="@+id/btn_criar_conta"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:text="@string/criar_conta"
            android:layout_marginBottom="10dp"
            android:background="@color/colorPrimary"/>

        <Button
            android:id="@+id/btn_entrar"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:text="@string/entrar"
            android:background="@color/colorPrimary"/>

   </LinearLayout>



</RelativeLayout>
